added scrollspy for menu and chef

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
 
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid-xl d-flex align-item-right">
           <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
@@ -51,7 +51,7 @@
                 <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Menu</a>
+                <a class="nav-link text-white fw-bold fs-4" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white fw-bold fs-4" href="#">Specials</a>
@@ -60,7 +60,7 @@
                 <a class="nav-link text-white fw-bold fs-4" href="#">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Chefs</a>
+                <a class="nav-link text-white fw-bold fs-4" href="#chefs">Chefs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white fw-bold fs-4" href="#">Gallery</a>
@@ -225,6 +225,7 @@
                     <!-- end of card -->
                     <br>
             <!-- CAFE MENU -->
+<div id="menu">
     <div class="container pt-5">
         <h1 class="mainHeader">Check our tasty Menu</h1>
                 <br>
@@ -309,9 +310,11 @@
         </div>
         <!-- container end -->
     </div>
+  </div>
 
                 <br><br>
                 <!-- Team -->
+<div id="chefs">
     <div class="container">
         <h1 class="mainHeader">Meet Our Team</h1>
                 <br>
@@ -369,6 +372,7 @@
             </div>
            
         </div>
+      </div>
          <!-- end of container -->
          <br>
          <footer class="container row">
