--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <a class="nav-link text-white fw-bold fs-4" href="#">About</a>
               </li>
             </ul>
-            <button type="button" class="btn fs-2 nav-item"><i class="bi bi-cart nav-link text-white"></i></button>
+            <button type="button" class="btn fs-2 nav-item" ><i class="bi bi-cart nav-link text-white"></i></button>
+            
           </div>
         </div>
       </nav>
@@ -355,6 +356,16 @@
                 <!-- end of row -->
             </div>
            
+        </div>
+
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <p>Try scrolling the rest of the page to see this option in action.</p>
+          </div>
         </div>
          <!-- end of container -->
          <br>
