--- a/about.html
+++ b/about.html
@@ -39,14 +39,15 @@
 
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+  
     <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid-xl d-flex align-item-right">
-          <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
+         <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
+          </div>
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="container d-flex justify-content-center">
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">Home</a>
               </li>
@@ -71,8 +72,16 @@
               <li class="nav-item">
                 <a class="nav-link text-white fw-bold fs-4" href="#">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></button>
+              </li>
             </ul>
-            <button type="button" class="btn fs-2 nav-item"><i class="bi bi-cart nav-link text-white"></i></button>
-          </div>
-        </div>
+        </div>  
       </nav>
+    </div>
+  
+</body>
+    <script src="js/bootstrap.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
+</html>
