--- a/about.html
+++ b/about.html
@@ -46,39 +46,28 @@
             <span class="navbar-toggler-icon"></span>
           </div>
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
-            <div class="container d-flex justify-content-center">
+            <div class="container d-flex justify-content-end">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">Home</a>
-              </li>
+                <a class="nav-link active text-white fw-bold fs-4"  href="#">Home</a>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#menu">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Specials</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Events</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#chefs">Chefs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Gallery</a>
+                <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white fw-bold fs-4" href="#">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">About</a>
+                <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></button>
+                <a class="nav-link fs-4" href="#"><button type="button" class="btn btn-outline-dark text-white">Request Catering</button></a>
               </li>
             </ul>
         </div>  
       </nav>
     </div>
+
+
   
 </body>
     <script src="js/bootstrap.js"></script>
