checkout page v1.0 added

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
-                    <p class="card-text">The quick brown fox jumped over the lazy dog under the log.</p>
+                    <!-- <p class="card-text">The quick brown fox jumped over the lazy dog under the log.</p> -->
                     <p class="card-text">Are you ready to stimulate your palate? Indulge in our delectable meals to satisfy your cravings.</p>
                 </div>
                 <div class="card-footer"><button class="button" href="">Hukad pa more</button></div>
