--- a/about.html
+++ b/about.html
@@ -67,8 +67,28 @@
       </nav>
     </div>
 
+<div class="container-fluid p-5 my-5">
+<div class="row">
+    <div class="col-12">
 
-  
+   
+        <div class="hero-image">
+            <img class="img-fluid" img src="img/img1.jpg">
+            <div class="hero-text">
+              <h1>ABOUT US</h1>
+              <p>ABOUT US
+                Established in 2001, Take a Break Cafe is a locally-owned, independent catering and restaurant service. 
+                Twenty years later, we’re still happily serving the community with quality fresh food. 
+                Our catering service has grown to become one of largest and most recognized services. 
+                It’s almost as popular as our famous cookies!</p>
+           
+            </div>
+          </div>
+          </div>
+        </div>
+    </div>
+
+    
 </body>
     <script src="js/bootstrap.js"></script>
     <!-- JavaScript Bundle with Popper -->
