--- a/about.html
+++ b/about.html
@@ -59,36 +59,34 @@
               <li class="nav-item">
                 <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fs-4" href="#"><button type="button" class="btn btn-outline-dark text-white">Request Catering</button></a>
-              </li>
             </ul>
         </div>  
       </nav>
     </div>
 
-<div class="container-fluid p-5 my-5">
-<div class="row">
-    <div class="col-12">
-
-   
-        <div class="hero-image">
-            <img class="img-fluid" img src="img/img1.jpg">
-            <div class="hero-text">
-              <h1>ABOUT US</h1>
-              <p>ABOUT US
-                Established in 2001, Take a Break Cafe is a locally-owned, independent catering and restaurant service. 
-                Twenty years later, we’re still happily serving the community with quality fresh food. 
-                Our catering service has grown to become one of largest and most recognized services. 
-                It’s almost as popular as our famous cookies!</p>
-           
-            </div>
-          </div>
-          </div>
-        </div>
+    <div class="container-fluid mt-5">
+      <img class="img-fluid" src="img/img1.jpg">
     </div>
-
+     <div class="container-fluid mt-5">
+        <h1 class="text-center">ABOUT US</h1>
+          <p class="text-center">
+            Take a Break Cafe is a cafe that serves simple, Filipino food –
+            <br>
+            including Vegan and Gluten Free options – accompanied by authentic espresso coffee.
+            <br>
+            Most coffee shops don’t do much with food and most restaurants don’t worry about coffee.
+            <br>
+            The Take a Break Cafe is a hybrid combining a strong coffee culture and a robust food culture 
+            <br>
+            under one roof in a welcoming, cozy and comfortable neighborhood café.
+          </p>
+    </div>
     
+    <div class="container mt-5">      
+      <img src="img/img2.jpg"  width="304" height="236"> 
+      <img src="img/img3.jpg"  width="304" height="236">
+    </div>
+  </div> 
 </body>
     <script src="js/bootstrap.js"></script>
     <!-- JavaScript Bundle with Popper -->
