added something on about page and img

--- a/about.html
+++ b/about.html
@@ -65,28 +65,90 @@
     </div>
 
     <div class="container-fluid mt-5">
-      <img class="img-fluid" src="img/img1.jpg">
+      <img class="img-fluid" src="img/img1.jpg" width="1500">
     </div>
-     <div class="container-fluid mt-5">
+  
+     <div class="container-fluid mt-5 pt-5">
         <h1 class="text-center">ABOUT US</h1>
           <p class="text-center">
-            Take a Break Cafe is a cafe that serves simple, Filipino food –
+            Take a break Cafe was established in 2001, owned by 3 people . 10 years 
             <br>
-            including Vegan and Gluten Free options – accompanied by authentic espresso coffee.
+            later, we’re still happily serving community with quality fresh food. Our cafe
             <br>
-            Most coffee shops don’t do much with food and most restaurants don’t worry about coffee.
+            has grown to become one of largest and most recognized services. It’s almost as
             <br>
-            The Take a Break Cafe is a hybrid combining a strong coffee culture and a robust food culture 
+            popular as our famous desserts!
+            <br><br>
+            We serve Filipino food, made with local ingredients, wherever possible, to provide
             <br>
-            under one roof in a welcoming, cozy and comfortable neighborhood café.
+            you with fresher, healthier and deliciously tasty meals. We have a well stocked pastry
+            <br>
+            cabinet a range of espresso coffees made from the finest coffee beans, 
+            <br>
+            roasted right here, and our baristas really know their 
+            <br>
+            beans. With their superior technical knowledge and a passion for making 
+            <br>
+            amazing coffee they will make you the perfect cuppa.
+            <br>
+            We host monthly wine dinners, chefs’ tasting dinners and more. We also enjoy hosting your
+            <br>
+            special occasions – whether baby showers, anniversaries, birthdays, or office parties. 
+            <br><br>
+            It’s the perfect place to relax on your own or to catch up with friends while enjoying great coffee and great food.
           </p>
     </div>
     
-    <div class="container mt-5">      
-      <img src="img/img2.jpg"  width="304" height="236"> 
-      <img src="img/img3.jpg"  width="304" height="236">
+    <div class="container mt-5 pt-5">
+      <div class="row">
+        <div class="col-lg-4 d-flex justify-content-center">    
+      <img src="img/img2.jpg"  width="350" height="236"></div>
+        <div class="col-lg-4 d-flex justify-content-center">
+      <img src="img/img3.jpg"  width="350" height="236"></div>
+        <div class="col-lg-4 d-flex justify-content-center">
+      <img src="img/img4.jpg"  width="350" height="236"></div>
     </div>
-  </div> 
+    </div>
+  
+     <div class="container-fluid mt-5 pt-5">
+        <h1 class="text-center">OUR BELIEFS</h1>
+          <p class="text-center">
+            Our customers have offered us over a decade of memorable moments serving community, and so we believe
+            <br>
+            the least we can do is continue serving them delicious dishes with a heartfelt smile. Customer service
+            <br>
+            is a cornerstone of our business, and receiving a smile in return is what we strive for – we hope that
+            <br>
+            our food will make everyone’s day a little bit better.
+            <br>
+            As such, we also strive to continuously improve our menu to satisfy your varying needs. From vegetarian, 
+            <br><br>
+            to gluten free, to diverse ethnic options, we want our customers to feel like We cater to you.
+          </p>
+    </div>
+  
+    <div class="container-fluid mt-5 pt-5">
+      <img class="img-fluid" src="img/img5.jpg" width="1500">
+    </div>
+
+    <div class="container-fluid mt-5 pt-5">
+      <h1 class="text-center">OUR QUALITY</h1>
+        <p class="text-center">
+          At Take a Break Cafe, we pride ourselves on the quality and freshness of our meals. Everything is 
+          made in-house by our chefs each and every day using only the best ingredients. Our owners still
+          bake and cook all of our signature food. And because we also pride ourselves on contributing
+          to our community, we are committed to using as much local produce as possible.
+        </p>
+     </div>
+
+     <div class="container-fluid p-5 mt-5 d-flex justify-content-center">
+                  <a href="https://www.facebook.com/"><i class="bi bi-facebook px-1"></i></a>
+                  <a href="https://www.instagram.com/"></a><i class="bi bi-instagram px-1"></i></a>
+                  <a href="#"></a><i class="bi bi-twitter px-1"></i></a>
+                  <a href="#"></a><i class="bi bi-linkedin px-1"></i></a>
+                  <a href="#"></a><i class="bi bi-strava px-1"></i></a> 
+    </div>
+
 </body>
     <script src="js/bootstrap.js"></script>
     <!-- JavaScript Bundle with Popper -->
