updates in Cards, Modal

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <p class="card-text">Get the most from a variety of hot and cold coffee drinks, carefully and hygienically prepared.</p>
                 </div>
                 <div class="card-footer">
-                  <button class="button btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
+                  <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -181,7 +181,7 @@
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
                     <!-- <p class="card-text">The quick brown fox jumped over the lazy dog under the log.</p> -->
-                    <p class="card-text">Are you ready to stimulate your palate? Indulge in our delectable meals to satisfy your cravings.</p>
+                    <p class="card-text">Are you ready to stimulate your palate? Indulge yourself with our delectable meals to satisfy your cravings.</p>
                 </div>
                 <div class="card-footer">
                   <button class="button btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#breakfastModal">Hukad pa more</button>
@@ -351,7 +351,7 @@
             <img src="img/BreadandBeacon.jfif" class="modalImage">
             <p></p>
             <h3>Bread and Beacon</h3>
-            <p class="modalText">Bread and Beacon makes this light meal best if you don't want to get heavy.</p>
+            <p class="modalText">Bread and Beacon makes this light meal ideal for someone who wants to stay on top of his/her weight loss program.</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
@@ -420,28 +420,28 @@
           <div class="modalCard">
             <img src="img/Blue Berry Shake" class="modalImage">
             <p></p>
-            <h3>Pancit Guisado</h3>
-            <p class="modalText">Mixed with seafood, topped with spring onions</p>
+            <h3>Blue Berry Shake</h3>
+            <p class="modalText">Increase your immune system with this natural drink</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
           </div>
 
           <div class="modalCard">
-            <img src="img/Pancit.jfif" class="modalImage">
+            <img src="img/FruitYogurtShakes.jfif" class="modalImage">
             <p></p>
-            <h3>Pancit Guisado</h3>
-            <p class="modalText">Mixed with seafood, topped with spring onions</p>
+            <h3>Fruit and Yughort Shake</h3>
+            <p class="modalText">Improve your gut health and your immune system</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
           </div>
 
           <div class="modalCard">
-            <img src="img/Pancit.jfif" class="modalImage">
+            <img src="img/StrawberryMilkShake.jfif" class="modalImage">
             <p></p>
-            <h3>Pancit Guisado</h3>
-            <p class="modalText">Mixed with seafood, topped with spring onions</p>
+            <h3>Strawberry Milk Shake</h3>
+            <p class="modalText">Power up your inner self with this very nutritious drink.</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
