added links to about page and checkout page

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <a class="nav-link text-white fw-bold fs-4" href="#">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">About</a>
+                <a class="nav-link text-white fw-bold fs-4" href="about.html">About</a>
               </li>
             </ul>
-            <button type="button" class="btn fs-2 nav-item" ><i class="bi bi-cart nav-link text-white"></i></button>
+            <button type="button" class="btn fs-2 nav-item href="checkout.html" ><i class="bi bi-cart nav-link text-white"></i></button>
             
           </div>
         </div>
