removed the bold text style and reduced the font size to default for the nav items

--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#menu">Menu</a>
+                <a class="nav-link text-white" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Specials</a>
+                <a class="nav-link text-white" href="#">Specials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Events</a>
+                <a class="nav-link text-white" href="#">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#chefs">Chefs</a>
+                <a class="nav-link text-white" href="#chefs">Chefs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Gallery</a>
+                <a class="nav-link text-white" href="#">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Contact</a>
+                <a class="nav-link text-white" href="#">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="about.html">About</a>
+                <a class="nav-link text-white" href="about.html">About</a>
               </li>
             </ul>
-            <button type="button" class="btn fs-2 nav-item href="checkout.html" ><i class="bi bi-cart nav-link text-white"></i></button>
+            <button type="button" class="btn fs-3 nav-item href="checkout.html" ><i class="bi bi-cart nav-link text-white"></i></button>
             
           </div>
         </div>
