removed some nav item, added id #menu for optimzed navigation to menu cards

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Specials</a>
-              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link text-white" href="#">Specials</a> -->
+              <!-- </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#">Events</a>
-              </li>
-              <li class="nav-item">
+              </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link text-white" href="#chefs">Chefs</a>
-              </li>
-              <li class="nav-item">
+              </li> -->
+              <!-- <li class="nav-item">
                 <a class="nav-link text-white" href="#">Gallery</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link text-white" href="#">Contact</a>
               </li>
@@ -122,7 +122,7 @@
       <!-- end of carousel -->
                 <br><br>
       <div class="container-sm">
-            <h1 class="mainHeader">Why Choose <b>Take A Break</b> Cafe</h1>
+            <h1 class="mainHeader" id="menu">Why Choose <b>Take A Break</b> Cafe</h1>
             <br>
             <p class="mainP d-flex justify-content-center">Take A Break Cafe prides itself for what its brand represents before our 
               valued customers.  Feeling sleepy, drained or just want to Take A Break; Whatever the circumstance,
