some changes in 'Meet our Team'

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <p class="card-text">Get the most from a variety of hot and cold coffee drinks, carefully and hygienically prepared.</p>
                 </div>
                 <div class="card-footer">
-                  <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
+                  <button type="button" class="btn btn-secondary btn-sm " data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -560,7 +560,8 @@
         <div class="row">
                 <div class="col-4 col-md card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="img/Me.jpg" class="img-fluid"/>
+                      <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
+                      <div class="image2"><img src="img/Me.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
@@ -574,7 +575,9 @@
 
                 <div class="col-4 col-md card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="chefs/chefs-2.jpg" class="img-fluid"/>
+                    <!-- <img src="chefs/chefs-2.jpg" class="img-fluid"/> -->
+                      <div class="image1"><img src="img/HalohaloFiesta.jfif" class="img-fluid"/></div>
+                      <div class="image2"><img src="chefs/chefs-2.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
@@ -588,14 +591,16 @@
 
                 <div class="col-4 col-md card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="chefs/chefs-3.jpg" class="img-fluid"/>
+                    <!-- <img src="chefs/chefs-3.jpg" class="img-fluid"/> -->
+                    <div class="image1"><img src="img/Bread.jfif" class="img-fluid"/></div>
+                      <div class="image2"><img src="chefs/chefs-3.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                     </div>
                     <div class="card-body">
                     <h5 class="card-title">Melvin</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Group Lead. Responsible in creating the structure of this site and providing the guidance to members.</p>
                     </div>
                     <div class="card-footer"> <a href="#!" class="btn btn-secondary">Profile</a></div>
                 </div>
