--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <div class="row">
+          <div class="col-8">items</div>
+          <div class="col-4">breakdown</div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary"><a href="checkout.html" target="_blank" class="text-white">Proceed to Checkout</a></button>
       </div>
     </div>
   </div>
