--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary"><a href="checkout.html" target="_blank" class="text-white">Proceed to Checkout</a></button>
       </div>
     </div>
   </div>
