--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
