--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
@@ -72,34 +72,12 @@
                 <a class="nav-link text-white" href="about.html">About</a>
               </li>
             </ul>
-            <button type="button" class="btn fs-3 nav-item"><i class="bi bi-cart nav-link text-white" data-bs-toggle="modal" data-bs-target="#cart"></i></button>
+            <button type="button" class="btn fs-3 nav-item href="checkout.html" ><i class="bi bi-cart nav-link text-white"></i></button>
             
           </div>
         </div>
       </nav>
 
-
-<!-- Modal -->
-<div class="modal fade" id="cart" tabindex="-1" aria-labelledby="cartLabel" aria-hidden="true">
-  <div class="modal-dialog modal-fullscreen">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="cartLabel">Your Cart</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-8">items</div>
-          <div class="col-4">breakdown</div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"><a href="checkout.html" target="_blank" class="text-white">Proceed to Checkout</a></button>
-      </div>
-    </div>
-  </div>
-</div>
                         <!-- CAROUSEL -->
 
       <div id="carouselExampleIndicators" class="carousel slide" style="height: 100%;" data-bs-ride="true">
