few changes in image

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           </div>
 
           <div class="modalCard">
-            <img src="img/Blue Berry Shake" class="modalImage">
+            <img src="img/BlueBerryMilkShake.jfif" class="modalImage">
             <p></p>
             <h3>Blue Berry Shake</h3>
             <p class="modalText">Increase your immune system with this natural drink</p>
