--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-              
-                <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Home</a
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
@@ -65,8 +63,6 @@
 
             <button type="button" class="btn fs-3 nav-item"><i class="bi bi-cart nav-link text-white" data-bs-toggle="modal" data-bs-target="#cart"></i></button>
               <!-- nav bar cart button with modal trigger -->
-
-            <button type="button" class="btn fs-3 nav-item href="checkout.html" ><i class="bi bi-cart nav-link text-white"></i></button>
             
 
           </div>
