added link to homepage

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <div class="container d-flex justify-content-end">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white fw-bold fs-4"  href="#">Home</a>
+                <a class="nav-link active text-white fw-bold fs-4"  href="index.html">Home</a>
               <li class="nav-item">
                 <a class="nav-link active fw-bold fs-4" aria-current="page" href="#">About</a>
               </li>
