added links and animation to navbar

--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link text-white"  href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
@@ -63,7 +63,7 @@
                 <a class="nav-link text-white" href="#chefs">Chefs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Gallery</a>
+                <a class="nav-link active" aria-current="page" href="#">Checkout</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#">Contact</a>
@@ -144,7 +144,7 @@
                       </label>
                     </div>
                   </div>
-                  <div class="btn btn-success btn-lg btn-block">Proceed to payment</div>
+                  <div class="btn btn-success btn-lg btn-block">PAY</div>
                 </div>
               </div>
               <div class="col-md-5 col-lg-4 col-xl-4 offset-lg-1 offset-xl-2">
