added something on contact page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a class="nav-link text-white fw-bold fs-4" href="#">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Contact</a>
+                <a class="nav-link text-white fw-bold fs-4" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white fw-bold fs-4" href="about.html">About</a>
