updated navbar with relevant nav item

--- a/index.html
+++ b/index.html
@@ -57,23 +57,15 @@
                 <a class="nav-link text-white" href="#">Contact</a>
               </li>
               <li class="nav-item">
-
-                <a class="nav-link text-white fw-bold fs-4" href="#">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#chefs">Chefs</a>
+                <a class="nav-link text-white" href="#chefs">Chefs</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Gallery</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="about.html">About</a>
-=======
+              <li>
                 <a class="nav-link text-white" href="about.html">About</a>
-
+              </li>
+              <li>
+                <a class="nav-link text-white" href="about.html">Checkout</a>
               </li>
             </ul>
 
