--- a/index.html
+++ b/index.html
@@ -42,22 +42,30 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid-xl d-flex align-item-right">
           <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Home</a>
+                <a class="nav-link active fw-bold text-danger" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact</a>
+                <a class="nav-link text-white" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#chefs">Chefs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="checkout.html">Checkout</a>
               </li>
             </ul>
 
@@ -170,7 +178,7 @@
                     <p class="card-text">Get the most from a variety of hot and cold coffee drinks, carefully and hygienically prepared.</p>
                 </div>
                 <div class="card-footer">
-                  <button type="button" class="btn btn-secondary btn-sm " data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -197,7 +205,7 @@
                     <p class="card-text">Are you ready to stimulate your palate? Indulge yourself with our delectable meals to satisfy your cravings.</p>
                 </div>
                 <div class="card-footer">
-                  <button class="button btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#breakfastModal">Hukad pa more</button>
+                  <button class="btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#breakfastModal">Hukad pa more</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -224,7 +232,7 @@
                       you can have them all to brigthen up your day. </p>
                 </div>
                 <div class="card-footer">
-                  <button class="button btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target= "#refreshmentsModal">Shake pa more</button>
+                  <button class="button btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#refreshmentsModal">Shake pa more</button>
                 </div>
             </div>
         </div>
