updated the navbar for checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -51,25 +51,13 @@
                 <a class="nav-link text-white"  href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#menu">Menu</a>
+                <a class="nav-link active" aria-current="page" href="checkout.html">Checkout</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Specials</a>
+                <a class="nav-link text-white" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Events</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#chefs">Chefs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Checkout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
+                <a class="nav-link text-white" href="about.html">About</a>
               </li>
             </ul>
             <button type="button" class="btn fs-2 nav-item" ><i class="bi bi-cart nav-link text-white"></i></button>
