--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,15 @@
             <div class="container d-flex justify-content-end">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white fw-bold fs-4"  href="index.html">Home</a>
+                <a class="nav-link active text-white"  href="index.html">Home</a>
               <li class="nav-item">
-                <a class="nav-link active fw-bold fs-4" aria-current="page" href="about.html">About</a>
+                <a class="nav-link active"  href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-bold fs-4" href="#">Contact</a>
+                <a class="nav-link text-danger" aria-current="page" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="checkout.html">Checkout</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></a>
@@ -82,7 +85,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6  mt-4 mt-lg-0">
-            <i class="bi bi-clock" style="font-size:48px;"></i>></i>
+            <i class="bi bi-clock" style="font-size:48px;"></i></i>
               <h4>Open Hours:</h4>
               <p>Monday-Saturday:<br>11:00 AM - 11:00 PM</p>
             </div>
@@ -126,13 +129,23 @@
     </div>
     </div>
     
-    <div class="container-fluid p-5 mt-5 d-flex justify-content-center">
-        <a href="https://www.facebook.com/"><i class="bi bi-facebook px-1"></i></a>
-        <a href="https://www.instagram.com/"></a><i class="bi bi-instagram px-1"></i></a>
-        <a href="#"></a><i class="bi bi-twitter px-1"></i></a>
-        <a href="#"></a><i class="bi bi-linkedin px-1"></i></a>
-        <a href="#"></a><i class="bi bi-strava px-1"></i></a> 
-     </div>
+    <footer class="container pt-5 mb-5 mt-5 d-flex justify-content-center">
+      <div class="row">
+      <div class="col">
+            <h4 class="text-center">FOLLOW US</h4>
+      
+      <div class="row">
+      <div class="col">
+        <h4 class="text-center">
+            <i class="bi bi-facebook px-1"></i>
+            <i class="bi bi-instagram px-1"></i>
+            <i class="bi bi-twitter px-1"></i>
+            <i class="bi bi-linkedin px-1"></i>
+            <i class="bi bi-strava px-1"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </h4>
+      </div>
+   </footer>
 
 
     <script src="js/bootstrap.js"></script>
