--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
           <div class="carousel-item active">
             <img src="slide/slide-1.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Slide Label</h5>
-                <p>Caption</p>
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
             <img src="slide/slide-2.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Slide Label</h5>
-                <p>Caption</p>
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
             <img src="slide/slide-3.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Slide Label</h5>
-                <p>Caption</p>
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
             </div>
           </div>
         </div>
@@ -497,70 +497,70 @@
             <br><br>
 
     <div class="container">
-        <div class="row">
-                <div class="col-6">
+        <div class="row d-flex flex-row">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Cappuccino</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 180.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>A blend of three equal parts of espresso, milk and milk foam.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Mocha Cafe</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 180</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>A mixture of espresso, milk, chocolate syrup, whipped cream and choco shavings</p></div>
                 </div>  
         
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Black Coffee</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 120.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on bottom.</p></div>
+                    <div class="col-12"><p>As its name implies, it's a brew of pure coffee from high quality Arabica coffee beans.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Pancit</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 50.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>Mixed with seafood and topped with spring onions. Ingredients may vary from region to region but the dish is very popular throughout the philippines.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Tapsilog</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 80.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>Fried - lightly dried thin slice of beef meat mixed with ingredients and glazed with syrup or honey paired with fried riced and sunny side fried egg.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Longsilog</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 80.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>Fried Longanesa with fried rice and fried sunny side up egg.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Halo-halo Beat the Heat</h4></div>
+                        <div class="col-6"><h3 class="text-end">₱ 100.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>Beat the heat with this mixture of cereals, icecream, milk, crushed ice, etc.</p></div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="row">    
-                        <div class="col-6"><h4>Lobster Biskwit</h4></div>
-                        <div class="col-6"><h3 class="text-end">$5.95</h3></div>
+                        <div class="col-6"><h4>Fruit Yughort Shake</div>
+                        <div class="col-6"><h3 class="text-end">₱ 100.00</h3></div>
                     </div>   
-                    <div class="col-12"><p>A delicate lobster with Skyflakes on top.</p></div>
+                    <div class="col-12"><p>Improve your gut health and your immune system.</p></div>
                 </div>
                 
             <!--row class end  -->
@@ -575,28 +575,28 @@
     <div class="container">
         <h1 class="mainHeader">Meet Our Team</h1>
                 <br>
-        <p class="mainP d-flex justify-content-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque perspiciatis Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod nostrum in ratione </p>
+        <p class="mainP d-flex justify-content-center">Our Team belongs to Group 5. Each one has different roles and contributes in the creation and development of this website. We collaborate using GitHub to ensure changes are tracked and merged in the proper order.  </p>
     </div>
             <br>
         <!-- Team cards -->
     <div class="container">
         <div class="row">
-                <div class="col-4 col-md card">
+                <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                      <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
-                      <div class="image2"><img src="img/Me.jpg" class="img-fluid"/></div>
+                      <div class="image1"><img src="img/Bread.jfif" class="img-fluid"/></div>
+                      <div class="image2"><img src="chefs/chefs-1.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Enerio</h5>
-                    <p class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Created the Modals to display different products.</p>
+                    <h5 class="card-title">Melvin</h5>
+                    <p class="card-text">Group Lead. Responsible in coding and creating the structure of this website and providing the guidance to members.</p>
                     </div>
                     <div class="card-footer"><a href="#!" class="btn btn-secondary">Profile</a></div>
                 </div>
 
-                <div class="col-4 col-md card">
+                <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <!-- <img src="chefs/chefs-2.jpg" class="img-fluid"/> -->
                       <div class="image1"><img src="img/HalohaloFiesta.jfif" class="img-fluid"/></div>
@@ -607,23 +607,23 @@
                     </div>
                     <div class="card-body">
                     <h5 class="card-title">Vanessa</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Group Member. Initiated the theme for the website. Responsible in coding and creating the contact and aboutpages.</p>
                     </div>
                     <div class="card-footer"><a href="#!" class="btn btn-secondary">Profile</a></div>
                 </div>
 
-                <div class="col-4 col-md card">
+                <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <!-- <img src="chefs/chefs-3.jpg" class="img-fluid"/> -->
-                    <div class="image1"><img src="img/Bread.jfif" class="img-fluid"/></div>
-                      <div class="image2"><img src="chefs/chefs-3.jpg" class="img-fluid"/></div>
+                    <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
+                      <div class="image2"><img src="img/Me.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Melvin</h5>
-                    <p class="card-text">Group Lead. Responsible in creating the structure of this site and providing the guidance to members.</p>
+                    <h5 class="card-title">Enerio</h5>
+                    <p class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to display different products.</p>
                     </div>
                     <div class="card-footer"> <a href="#!" class="btn btn-secondary">Profile</a></div>
                 </div>
@@ -636,9 +636,9 @@
       </div>
          <!-- end of container -->
          <br>
-         <footer class="container row">
+         <footer class="container row ">
             <div class="col-6 d-flex justify-content-end">
-                  <h4>footer</h4>
+                  <h4>Follow Us</h4>
             </div>
             <div class="col-6">
               <h4>
@@ -646,7 +646,7 @@
                   <i class="bi bi-instagram px-1"></i>
                   <i class="bi bi-twitter px-1"></i>
                   <i class="bi bi-linkedin px-1"></i>
-                  <i class="bi bi-strava px-1"></i>
+                  <!-- <i class="bi bi-strava px-1"></i> -->
               </h4>
             </div>
          </footer>
