--- a/contact.html
+++ b/contact.html
@@ -130,22 +130,19 @@
     </div>
     
     <footer class="container pt-5 mb-5 mt-5 d-flex justify-content-center">
-      <div class="row">
-      <div class="col">
-            <h4 class="text-center">FOLLOW US</h4>
       
-      <div class="row">
-      <div class="col">
-        <h4 class="text-center">
-            <i class="bi bi-facebook px-1"></i>
-            <i class="bi bi-instagram px-1"></i>
-            <i class="bi bi-twitter px-1"></i>
-            <i class="bi bi-linkedin px-1"></i>
-            <i class="bi bi-strava px-1"></i>
-            <i class="fa-brands fa-youtube"></i>
-        </h4>
-      </div>
-   </footer>
+      <h4 class="text-center me-3">FOLLOW US</h4>
+
+    <h4 class="text-center">
+      <i class="bi bi-facebook px-1"></i>
+      <i class="bi bi-instagram px-1"></i>
+      <i class="bi bi-twitter px-1"></i>
+      <i class="bi bi-linkedin px-1"></i>
+      <i class="bi bi-strava px-1"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </h4>
+  </div>
+  </footer>
 
 
     <script src="js/bootstrap.js"></script>
