--- a/checkout.html
+++ b/checkout.html
@@ -69,7 +69,7 @@
       <!-- start of checkout card -->
       <br><br>
 
-      <div class="container-fluid mt-5">
+      <div class="container-fluid mt-5 pt-5">
         <section>
             <div class="d-flex justify-content-between align-items-center mb-5">
               <div class="d-flex flex-row align-items-center">
