--- a/contact.html
+++ b/contact.html
@@ -129,11 +129,13 @@
     </div>
     </div>
     
-    <footer class="container pt-5 mb-5 mt-5 d-flex justify-content-center">
+    <footer>
+
+    <div class="container pt-5 mb-5 mt-5 d-flex justify-content-center">
       
       <h4 class="text-center me-3">FOLLOW US</h4>
 
-    <h4 class="text-center">
+    <h4 class="text-center"> 
       <i class="bi bi-facebook px-1"></i>
       <i class="bi bi-instagram px-1"></i>
       <i class="bi bi-twitter px-1"></i>
