--- a/index.html
+++ b/index.html
@@ -109,24 +109,56 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 6"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="slide/slide-1.jpg" class="d-block w-100" alt="">
+            <img src="img/CappucinoSlid2.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="slide/slide-2.jpg" class="d-block w-100" alt="">
+            <img src="img/CoffeeBean4.jfif" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="slide/slide-3.jpg" class="d-block w-100" alt="">
+            <img src="img/smoothies.jpg" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/PancitSlid.jpg" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/Menudo-Recipe-with-Pork.jpg" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/img1.jpg" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+                <!-- <h5>Slide Label</h5>
+                <p>Caption</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/BreadSlide.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
