made the navbar font style and formatting uniform for all pages

--- a/checkout.html
+++ b/checkout.html
@@ -39,33 +39,32 @@
 
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid-xl d-flex align-item-right">
-          <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link text-white"  href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="checkout.html">Checkout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="about.html">About</a>
-              </li>
-            </ul>
-            <button type="button" class="btn fs-2 nav-item" ><i class="bi bi-cart nav-link text-white"></i></button>
-            
-          </div>
-        </div>
-      </nav>
-
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
+     <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </div>
+      <div class="collapse navbar-collapse ps-13" id="navbarSupportedContent">
+        <div class="container d-flex justify-content-end">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white"  href="index.html">Home</a>
+          <li class="nav-item">
+            <a class="nav-link text-white"  href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" aria-current="page" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-danger active fw-bold" href="checkout.html">Checkout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white"></i></a>
+          </li>
+        </ul>
+    </div>  
+  </nav>
+</div>
       <!-- start of checkout card -->
       <br><br>
 
