--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@
               <li class="nav-item">
                 <a class="nav-link active text-white"  href="index.html">Home</a>
               <li class="nav-item">
-                <a class="nav-link active"  href="about.html">About</a>
+                <a class="nav-link text-white"  href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" aria-current="page" href="contact.html">Contact</a>
+                <a class="nav-link text-danger fw-bold" aria-current="page" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="checkout.html">Checkout</a>
