--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
                 <a class="nav-link text-white" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link text-white" href="#chefs">Chefs</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link text-white" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#chefs">Chefs</a>
-              </li>
+              
               <li class="nav-item">
               </li>
               <li class="nav-item">
@@ -71,8 +72,8 @@
               <li class="nav-item">
                 <a class="nav-link text-white" href="checkout.html">Checkout</a>
               </li>
-              <li>
-                <button type="button" class="btn fs-3 nav-item"><i class="bi bi-cart nav-link text-white" data-bs-toggle="modal" data-bs-target="#cart"></i></button>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-cart fs-4 text-white" data-bs-toggle="modal" data-bs-target="#cart"></i></button></a>
                 <!-- nav bar cart button with modal trigger -->
               </li>
           </ul>
