--- a/index.html
+++ b/index.html
@@ -161,49 +161,49 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/CappucinoSlid2.jpg" class="d-block w-100" alt="">
+            <img src="img/CappucinoSlid2.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/CoffeeBean4.jfif" class="d-block w-100" alt="">
+            <img src="img/CoffeeBean4.jfif" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/smoothies.jpg" class="d-block w-100" alt="">
+            <img src="img/smoothies.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/PancitSlid.jpg" class="d-block w-100" alt="">
+            <img src="img/PancitSlid.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/Menudo-Recipe-with-Pork.jpg" class="d-block w-100" alt="">
+            <img src="img/Menudo-Recipe-with-Pork.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/img1.jpg" class="d-block w-100" alt="">
+            <img src="img/img1.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/BreadSlide.jpg" class="d-block w-100" alt="">
+            <img src="img/BreadSlide.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
